crates/ir/tests/ir/snapshots/main__ir__lower__linear__lambda_capture_owned_called_once.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module linear__lambda_capture_owned_called_once

type Buffer = MkBuffer#0(String)
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn take(v0: ~Buffer) -> Unit =
  switch v0 {
    0 (v1: String) ->
      ()
  }

fn main() -> Unit =
  let v2: ~Buffer = construct Buffer::MkBuffer#0("x")
  let v3: ~() -> Unit = make_closure(lambda$27, [v2])
  let v6: Unit = call_closure v3()
  v6

fn lambda$27(v4: ~Buffer) -> Unit =
  let v5: Unit = call take(v4)
  v5
