crates/ir/tests/ir/snapshots/main__ir__lower__linear__linear_dispose_self_no_recursion.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module linear__linear_dispose_self_no_recursion

type Foo = MkFoo#0(Int)
instance core/disposable.Disposable[Foo] { dispose=Disposable$$Foo$$dispose }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn Disposable$$Foo$$dispose(v0: ~Foo) -> Unit =
  switch v0 {
    0 (v1: Int) ->
      ()
  }
