crates/ir/tests/ir/snapshots/main__ir__lower__linear__linear_explicit_consume_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module linear__linear_explicit_consume_ok

type Buf = MkBuf#0(String)
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn take_bare(v0: Buf) -> Unit =
  switch v0 {
    0 (v1: String) ->
      ()
  }

fn consume(v2: ~Buf) -> Buf =
  switch v2 {
    0 (v3: String) ->
      let v4: Buf = construct Buf::MkBuf#0(v3)
      v4
  }

fn main() -> Unit =
  let v5: ~Buf = construct Buf::MkBuf#0("x")
  let v6: Buf = call consume(v5)
  let v7: Unit = call take_bare(v6)
  v7
