crates/ir/tests/ir/snapshots/main__ir__lower__linear__linear_moved_into_tuple.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module linear__linear_moved_into_tuple

type Buf = MkBuf#0(String)
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn take_pair(v0: (~Buf, Int)) -> Unit =
  let v1: Buf = tuple_project v0.0
  let v2: Int = tuple_project v0.1
  switch v1 {
    0 (v3: String) ->
      ()
  }

fn main() -> Unit =
  let v4: ~Buf = construct Buf::MkBuf#0("x")
  let v5: (~Buf, Int) = tuple(v4, 1)
  let v6: Unit = call take_pair(v5)
  v6
